--- a/typewriter.html
+++ b/typewriter.html
@@ -68,6 +68,11 @@ function lessonchange()
   <option value="asdf ;lkj ">Lesson 2</option>
   <option value="qwerty">Lesson 3</option>
   <option value="qwertypoiuy">Lesson 4</option>
+<option value="qwerty poiuy ">Lesson 5</option>
+<option value="zxcvrty">Lesson 6</option>
+<option value="mnbuyt">Lesson 7</option>
+<option value="abcdefg">Lesson 8</option>
+<option value="abcdefghijkl">Lesson 9</option>
 </select><br><br>
 </div>
 
