--- a/typewriter.html
+++ b/typewriter.html
@@ -65,14 +65,22 @@ function lessonchange()
 <select id="textptn" onchange="lessonchange()">
 <option value="">Select Lesson</option>
   <option value="asdf;lkj">Lesson 1</option>
+   <option value="fdsajkl;">Lesson 1.1</option>
   <option value="asdf ;lkj ">Lesson 2</option>
+  <option value="fdsa jkl; ">Lesson 2.1</option>
   <option value="qwerty">Lesson 3</option>
+  <option value="ytrewq">Lesson 3</option>
   <option value="qwertypoiuy">Lesson 4</option>
+    <option value="yuiopytrewq">Lesson 4.1</option>
 <option value="qwerty poiuy ">Lesson 5</option>
 <option value="zxcvrty">Lesson 6</option>
+<option value="ytrvcxz">Lesson 6.1</option>
 <option value="mnbuyt">Lesson 7</option>
+<option value="tyubnm">Lesson 7.1</option>
 <option value="abcdefg">Lesson 8</option>
+<option value="gfedcba">Lesson 8.1</option>
 <option value="abcdefghijkl">Lesson 9</option>
+<option value="lkjihgfedcba">Lesson 9.1</option>
 </select><br><br>
 </div>
 
@@ -82,7 +90,8 @@ function lessonchange()
 
 <br></br>
 <div>
-Your Text: <textarea id="fname" onkeyup="myFunction()"></textarea>
+<h1>
+Your Text: <textarea id="fname" onkeyup="myFunction()" rows="2" cols="30" style="font-size: 20pt"></textarea><h1>
 
 <p>typed text: <span id="demo"></span></p>
 <h1>count: <span id="count"></span></h1>
