--- a/typewriter.html
+++ b/typewriter.html
@@ -81,6 +81,8 @@ function lessonchange()
 <option value="gfedcba">Lesson 8.1</option>
 <option value="abcdefghijkl">Lesson 9</option>
 <option value="lkjihgfedcba">Lesson 9.1</option>
+<option value="abcdefghijklmnopqrstuvwxyz">Lesson 12</option>
+<option value="zyxwvutsrqponmlkjihgfedcba">Lesson 13</option>
 </select><br><br>
 </div>
 
